# cognitive-eval-sandbox

./: .achievement-marker  .gitignore  LICENSE  README.md  pyproject.toml
docs/: research-agenda.md  research-landscape.md  rl-belief-formalism.md  terra-isro-bridge.md  thought-tracing-integration.md
evals/: __init__.py
evals/scientific/: __init__.py
evals/scientific/causal_crop_hypothesis/: README.md  __init__.py  rule_engine.py  runner.py  schema.py
evals/scientific/causal_crop_hypothesis/data/: items.jsonl
evals/tom/: __init__.py  thought_tracing_adapter.py
evals/tom/monsoon_belief_revision/: README.md  __init__.py  loader.py  runner.py  schema.py
evals/tom/monsoon_belief_revision/data/: samples.jsonl
geo/: __init__.py  bhoonidhi_stac.py  terrafm_embed.py
geo/tasks/: __init__.py  rabi_crop_probe.py
rl/: __init__.py  agrarian_tom_env.py  belief_tracker.py  features.py  train.py
scripts/: run_all.sh
tests/: test_smoke.py
