[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-eval-sandbox"
version = "0.1.0"
description = "Theory-of-mind and scientific reasoning eval experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aashwin" }]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
geo = ["torch>=2.0", "rasterio>=1.3"]
llm = ["openai>=1.0"]

[project.scripts]
mbr-run = "evals.tom.monsoon_belief_revision.runner:main"
cch-run = "evals.scientific.causal_crop_hypothesis.runner:main"
tom-rl-train = "rl.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evals*", "geo*", "rl*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
